# gnomewerks

./: .gitignore  Dockerfile  README.md  dev-cycle.sh  pyproject.toml
src/gw/cnc/: __init__.py  boxes.py  cli.py
src/gw/css/: __init__.py
src/gw/svg/: __init__.py
